# likertshift

./: README.md
app/: .gitignore  (+4 more)
evaluation/: .gitignore  eval_questionnaires.py  eval_route_ratings.py  eval_tlx.py  plot.py  pyproject.toml
evaluation/data/: .gitignore  extract_audio_markers.py  extract_mapping_markers.py  transcribe_interviews.py  write_markers_to_recordings.py
evaluation/data/00518/: bfi-10.json  demographics.json  interview.md
evaluation/data/1862f/: bfi-10.json  demographics.json  interview.md
evaluation/data/1ae7a/: bfi-10.json  demographics.json  interview.md
evaluation/data/1b76e/: bfi-10.json  demographics.json  interview.md
evaluation/data/26109/: bfi-10.json  demographics.json  interview.md
evaluation/data/26a50/: bfi-10.json  demographics.json  interview.md
evaluation/data/51bfc/: bfi-10.json  demographics.json  interview.md
evaluation/data/56d94/: bfi-10.json  demographics.json  interview.md
evaluation/data/7c2ba/: bfi-10.json  interview.md
evaluation/data/8054d/: bfi-10.json  demographics.json  interview.md
evaluation/data/94aa4/: bfi-10.json  demographics.json  interview.md
evaluation/data/af683/: bfi-10.json  demographics.json  interview.md
evaluation/data/b1428/: bfi-10.json  interview.md
evaluation/data/ca02f/: bfi-10.json  demographics.json  interview.md
evaluation/data/dd79c/: bfi-10.json  demographics.json  interview.md
evaluation/data/f0299/: bfi-10.json  demographics.json  interview.md
evaluation/routes/: east_route.json  north_route.json  north_route2.json  south_route.json  south_route2.json
(+444 files in other folders)
