[project]
name = "evaluation"
version = "0.1"
requires-python = "==3.11.*"
readme = "README.md"
dependencies = ["numpy", "folium", "openai-whisper", "torch"]

[dependency-groups]
dev = ["ruff"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnusedCallResult = "none"
reportUnknownMemberType = "none"

[tool.ruff]
line-length = 100

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch" }
